8318172: [Lilliput/JDK17] Disable Lilliput in TestZGCWithCDS